EKS/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mist
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: mist
  name: mist
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mist
      app.kubernetes.io/name: mist
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mist
        app.kubernetes.io/name: mist
    spec:
      serviceAccountName: job-robot
      containers:
      - image: <IMAGE>
        imagePullPolicy: Always
        name: mist
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-mist
  namespace: default
spec:
  ports:
    - port: 80
      name: mist
      targetPort: 5000
      protocol: TCP
    - port: 8080
      name: mist-webui
      targetPort: 7860
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: mist
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mist
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-mist
              port:
                number: 80
        - path: /webui
          pathType: Prefix
          backend:
            service:
              name: service-mist-webui
              port:
                number: 8080
